--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ body {
 }
 
 #login__input__container {
-  /* background-color: gray; */
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -130,6 +129,8 @@ body {
 }
 
 #input__conditions {
+  margin: 0;
+  padding: 0;
   font-weight: 300;
   color: var(--clr-primary-800);
   font-size: 0.8rem;
