--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ body {
   border: none;
   outline: 1px solid hsl(var(--clr-neutral-100));
   opacity: 0.8;
+  cursor: pointer;
   transition: 0.35s background-color ease-out;
   transition: 0.3s background-color, color ease-out;
   isolation: isolate;
